--- a/client/profile/employerProfileStyle.css
+++ b/client/profile/employerProfileStyle.css
@@ -4,3 +4,6 @@
 #addJobPostinProfile{
 	float:right;
 }
+#employerContactInfo, #employerHeaderInfo{
+	overflow-wrap: break-word;
+}
