--- a/client/profile/publicDeveloperProfileStyle.css
+++ b/client/profile/publicDeveloperProfileStyle.css
@@ -4,7 +4,12 @@
 #viewContactPublic li{
 	display:inline;
 	font-size:70%;
+	overflow-wrap: break-word;
 }
 .viewPublic{
 	text-indent: 2em;
+	overflow-wrap: break-word;
+}
+#headerDeveloperPublic{
+	overflow-wrap: break-word;
 }
